styles.css
/* ... */
    .search-results a:hover {
        background-color: lightgray;
        text-decoration: none;
        border-radius: 1rem;
    }
    a.search-result-link:hover {
        background-color: lightgray;
        text-decoration: none;
        border-radius: 1rem;
    }


    .search-result-image {
        display: flex;
        flex-direction: column;
        flex-wrap: nowrap;
        justify-content: center;
        align-items: center;
        align-self: flex-start;
        padding: 0.5rem 0;
        margin: auto;
        max-height: 65%;
    }

    .search-result-image img {
        /* max-width: 500px; */
        max-height: 295px;
    }

    .img-search-result {
        border-radius: 0.5rem;
        border: solid 0.1rem black;
        padding: 0.5rem;
        /* min-width: 50%; */
    }


    /* .search-result-text {
        min-width: 50%;
    } */

    .pagination {
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        justify-content: center;
        align-items: center;
    }

    .pagination-button {
        margin: auto;
        padding: 1rem;
    }

    /* footer */
    footer {
        display: flex;
        flex-wrap: nowrap;
        justify-content: space-around;
        align-items: center;
        width: 100%;
        height: 3rem;
        border-top: 0.2rem solid black;
    }

    .footer-item {
        display: flex;
        flex-wrap: nowrap;
        justify-content: space-between;
        align-items: center;
    }

    /* alien details page */
    .alien-main-banner {
        display: flex;
        flex-wrap: nowrap;
        flex-direction: column;
        justify-content: space-around;
        align-items: center;
        margin: auto;
        width: 90%;
    }

    .alien-name-max {
        align-self: flex-start;
        padding: 0.5rem;
    }

    .h2-alfname {
        color: black;
        font-size: 3rem;
        text-align: center;
        white-space: nowrap;
        margin: auto;
        text-transform: uppercase;
    }

    .creators-container {
        display: flex;
        flex-direction: row;
        justify-content: flex-start;
        align-items: center;
        margin: auto;
    }

    .creator-label {
        display: flex;
        flex-wrap: nowrap;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        margin: auto;
    }

    .h2-creator {
        padding-left: 0.5rem;
    }

    .creator-name {
        padding: 2rem;
        overflow: hidden;
  text-overflow: ellipsis;
    }

    .creator-name p {
        /* hanging indent for longer names wrapping */
        text-indent: -0.6rem
    }

    .creators-validator-container {
        position: relative;
        flex-wrap: nowrap;
        display: flex;
    }

    /* alien details images section */
    .alien-images-section {
        display: flex;
        flex-wrap: nowrap;
        flex-direction: column;
        justify-content: space-around;
        align-items: center;
        margin: 1rem 0;
        width: 90%;
    }

    .alien-images-container {
        display: flex;
        flex-wrap: nowrap;
        flex-direction: row;
        justify-content: space-around;
        align-items: center;
        margin: auto;
        width: 100%;
    }

    .alien-image {
        position: relative;
        display: flex;
        flex-wrap: nowrap;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        margin: auto;
        padding: 1rem;
        width: 90%;
        max-width: 255px;
        border-radius: 1rem;
        border: solid 0.1rem black;
        background-color: white;
    }

    .alien-image img {
        border-radius: 0.5rem;
        border: solid 0.1rem black;
    }

    .image-validator-container {
        position: absolute;
        z-index: 1;
        bottom: 2rem;
        right: -0.3rem;
        display: flex;
        flex-wrap: nowrap;
        flex-direction: column;
        align-items: flex-end;
        width: 100%;
        height: 1%;
    }

    /* alien details containers */
    .alien-details-container {
        display: flex;
        flex-wrap: nowrap;
        flex-direction: column;
        justify-content: center;
        width: 90%;
        border-radius: 1rem;
        background-color: white;
    }

    details {
        /* flex:1; */

        user-select: none;
    }

    summary span.icon-pointer {
        height: 3rem;
        font-size: 2rem;
        transition: all 0.3s;
        transform: rotate(90deg);

    }

    details[open] summary span.icon-pointer {

        transform: rotate(270deg);
    }

    summary {
        font-size: large;
        border-bottom: solid 0.1rem black;
        width: 97%;
        cursor: pointer;
    }

    summary::-webkit-details-marker {
        display: none;
    }

    .text-container {
        display: flex;
        flex-wrap: nowrap;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        margin: auto;
        border-bottom: solid 0.1rem black;
    }

    .ptext {
        display: flex;
        flex-wrap: nowrap;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        margin: auto;
        width: 97%;
        padding: 0.5rem;
    }

    .detail-validator-container {
        position: relative;
        top: 0;
        right: 0;
        display: flex;
        flex-wrap: nowrap;
        flex-direction: column;
        align-items: flex-end;
        width: 100%;
        height: 1%;
        margin-left: 0.5rem;
        margin-bottom: 1rem;
    }
/* ... */

